ver 0.21.12 (not yet released)
* Windows
  - support backslash in relative URIs loaded from playlists

ver 0.21.11 (2019/07/03)
* input
  - tidal: deprecated because Tidal has changed the protocol
* decoder
  - wildmidi: log error if library initialization fails
* output
  - alsa: fix busy loop while draining
  - alsa: fix missing drain call
  - alsa: improve xrun-avoiding silence generator
  - alsa: log when generating silence due to slow decoder
  - alsa, osx: fix distortions with DSD_U32 and DoP on 32 bit CPUs
* protocol
  - fix "list" with multiple "group" levels

ver 0.21.10 (2019/06/05)
* decoder
  - opus: fix duplicate tags
* output
  - httpd: reject some well-known URIs
* fix crash bug (0.21.9 regression)

ver 0.21.9 (2019/05/20)
* input
  - buffer: fix deadlock bug
* Android
  - fix crash on ARMv7
  - request storage permission on Android 6+
* fix spurious "single" mode bug

ver 0.21.8 (2019/04/23)
* input
  - smbclient: download to buffer instead of throttling transfer
* output
  - httpd: add missing mutex lock
  - httpd: fix use-after-free bug
* playlist
  - soundcloud: fix "Unsupported URI scheme" (0.21.6 regression)
* fix Bonjour bug
* fix build failure with GCC 9
* fix build failure with -Ddatabase=false
* systemd: add user socket unit
* doc: "list file" is deprecated

ver 0.21.7 (2019/04/03)
* input
  - qobuz/tidal: scan tags when loading a playlist
* require Meson 0.49.0 for native libgcrypt-config support
* fix build failure with -Dlocal_socket=false
* Haiku
  - fix build
  - add version info

ver 0.21.6 (2019/03/17)
* protocol
  - allow loading playlists specified as absolute filesystem paths
  - fix negated filter expressions with multiple tag values
  - fix "list" with filter expression
  - omit empty playlist names in "listplaylists"
* input
  - cdio_paranoia: fix build failure due to missing #include
* decoder
  - opus: fix replay gain when there are no other tags
  - opus: fix seeking to beginning of song